[gd_scene load_steps=7 format=3 uid="uid://cl6abi4w63rmt"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_j60mk"]
[ext_resource type="Texture2D" uid="uid://btslopi34erqc" path="res://assests/slime.png" id="2_l4jya"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssa4q"]
size = Vector2(129, 127)

[sub_resource type="CircleShape2D" id="CircleShape2D_ds25d"]
radius = 120.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3euko"]
size = Vector2(128, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_amq15"]
radius = 120.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_j60mk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -28)
scale = Vector2(6.21094, 5.61719)
texture = ExtResource("2_l4jya")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_ssa4q")

[node name="e_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="e_hitbox"]
shape = SubResource("CircleShape2D_ds25d")
disabled = true

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_3euko")

[node name="attack" type="Timer" parent="."]
wait_time = 0.5

[node name="detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource("CircleShape2D_amq15")

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
[connection signal="area_entered" from="detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="detector" to="." method="_on_detector_area_exited"]
